# rtm

./: .gitignore  Cargo.toml  README.md  transactions.csv
.github/workflows/: docs.yaml  tests.yaml
projects/rtm_cli/: Cargo.toml
projects/rtm_cli/src/: csv_reader.rs  csv_writer.rs  main.rs
projects/rtm_core/: Cargo.toml
projects/rtm_core/src/: lib.rs
projects/rtm_core/src/models/: accounting_operation.rs  amount.rs  client_id.rs  mod.rs  transaction.rs  transaction_id.rs
projects/rtm_core/src/processor/: accounting_system.rs  client_account.rs  errors.rs  mod.rs
projects/rtm_core/tests/: test_accounting_system.rs
